--- a/templates/importBookHTML/importBook.html
+++ b/templates/importBookHTML/importBook.html
@@ -19,7 +19,9 @@
                 <label for="num_books" class="form-label">Number of Books to Import</label>
                 <input type="number" class="form-control" id="num_books" name="num_books">
             </div>
-            <input type="submit" value="Import Books">
+            <!-- <input type="submit" value="Import Books"> -->
+            <button type="submit" class="btn btn-primary" value="Import Books">Import</button>
+
         </form>
     </div>
 {% endblock %}
